gccida/c3/parse_options_and_default_flags
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/parse_options_and_default_flags/src/toplev.c:5117:1: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
lang_hooks_0.init_options( ); 
^~~~~~~~~~~~
lang_hooks
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/parse_options_and_default_flags/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/parse_options_and_default_flags/src/toplev.c:5187:21: error: use of undeclared identifier 'arg0'
set_target_switch( &arg0); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/parse_options_and_default_flags/src/toplev.c:5192:18: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
lang_processed = lang_hooks_0.decode_option( argc - ia, &argv[ia]); 
                 ^~~~~~~~~~~~
                 lang_hooks
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/parse_options_and_default_flags/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/parse_options_and_default_flags/src/toplev.c:5192:44: error: called object type '<dependent type>' is not a function or function pointer
lang_processed = lang_hooks_0.decode_option( argc - ia, &argv[ia]); 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/parse_options_and_default_flags/src/toplev.c:5257:1: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
lang_hooks_0.post_options( ); 
^~~~~~~~~~~~
lang_hooks
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/parse_options_and_default_flags/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/parse_options_and_default_flags/src/obj/toplev.o] Error 1
